--- a/LuanFirstAppAndroid/app/src/main/res/layout/activity_main.xml
+++ b/LuanFirstAppAndroid/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,15 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_below="@+id/article_heading"
-    android:id="@+id/main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".MainActivity">
-    >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/hello_world_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:text="Hello World!"
+        android:textSize="24sp"
+        android:layout_centerInParent="true" />
 
-        <TextView
-            android:id="@+id/article_subheading"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/padding_regular"
-            android:text="@string/article_subtitle"
-            android:textAppearance=
-                "@android:style/TextAppearance.DeviceDefault"
-            android:textSize="50sp"/>
-
-        <TextView
-            android:id="@+id/article"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoLink="web"
-            android:lineSpacingExtra="@dimen/line_spacing"
-            android:padding="@dimen/padding_regular"
-            android:text="@string/article_text"
-            android:textSize="50sp" />
-    </LinearLayout>
-
-</ScrollView>
-
+</RelativeLayout>
