--- a/LuanFirstAppAndroid/app/src/main/res/layout/activity_main.xml
+++ b/LuanFirstAppAndroid/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,13 @@
         android:textSize="24sp"
         android:layout_centerInParent="true" />
 
+    <!-- activity_main.xml -->
+    <Button
+        android:id="@+id/button_open_activity2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Activity2"
+        android:onClick="openActivity2" />
+
+
 </RelativeLayout>
